<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appBar_Color"
            android:fitsSystemWindows="true"
            app:collapseIcon="@drawable/back"
            app:title="My App"
            app:titleTextColor="@color/white">

            <ImageView
                android:id="@+id/watchlist_toolbar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/watch_list_icon_in_main_screen"
                android:src="@drawable/watch" />
        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/actionBarSize">


            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_scrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none">

                        <LinearLayout
                            android:id="@+id/sorting_options"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                            <include
                                android:id="@+id/custom1"
                                layout="@layout/sort_buttons"
                                android:layout_width="50dp"
                                android:layout_height="wrap_content" />

                            <Space
                                android:layout_width="6dp"
                                android:layout_height="0dp" />

                            <include
                                android:id="@+id/custom2"
                                layout="@layout/sort_buttons" />

                            <Space
                                android:layout_width="6dp"
                                android:layout_height="0dp" />

                            <include
                                android:id="@+id/custom3"
                                layout="@layout/sort_buttons" />

                            <Space
                                android:layout_width="6dp"
                                android:layout_height="0dp" />

                            <include
                                android:id="@+id/custom4"
                                layout="@layout/sort_buttons" />

                            <Space
                                android:layout_width="6dp"
                                android:layout_height="0dp" />

                            <include
                                android:id="@+id/custom5"
                                layout="@layout/sort_buttons" />

                            <Space
                                android:layout_width="6dp"
                                android:layout_height="0dp" />

                            <include
                                android:id="@+id/custom6"
                                layout="@layout/sort_buttons" />


                        </LinearLayout>
                    </HorizontalScrollView>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <ProgressBar
                        android:id="@+id/circular_progressBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:indeterminateTint="#D4ECDD" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/go_to_top_fab_button"
                android:src="@drawable/arrow_up"
                app:backgroundTint="#F3F1F5"
                app:fabSize="normal"
                tools:ignore="SpeakableTextPresentCheck" />


        </FrameLayout>


    </FrameLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_nav"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/cardBg"
        app:itemTextColor="@color/white"
        app:menu="@menu/navigation_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_icon"
                android:src="@drawable/stack" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appName"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>